--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/study_it?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
+
+studyit.application.secret=theSecret
+studyit.application.tokenExpirationMs=100000000
